--- a/src/main/resources/templates/administrator/insert.html
+++ b/src/main/resources/templates/administrator/insert.html
@@ -28,10 +28,63 @@
 
 				
 <!-- ここから上を編集する必要はありません -->
+				<form method="post" action="login.html" th:action="@{/administrator/insert}" th:object="${insertAdministratorForm}">
+						<fieldset>
+							<legend>管理者登録<br>(システムにログインできる管理者を登録します)</legend>
+							<!-- 氏名 -->
+							<div class="form-group">
+								<div class="row">
+									<div class="col-sm-12">
+										<label for="name">
+											氏名:
+										</label>
+										<label class="error-messages" >
+											<span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
+										</label>
+										<input type="text" name="name" id="name" class="form-control" placeholder="山田太郎" th:field="*{name}">
+									</div>
+								</div>
+							</div>
+							<!-- メールアドレス -->
+							<div class="form-group">
+								<div class="row">
+									<div class="col-sm-12">
+										<label for="mailAddress">
+											メールアドレス:
+										</label>
+										<label  class="error-messages">
+											<span th:if="${#fields.hasErrors('mailAddress')}" th:errors="*{mailAddress}">メールアドレスを入力してください</span>
+										</label>
+										<input type="text" name="mailAddress" id="mailAddress" class="form-control" placeholder="yamada@mail.com" th:field="*{mailAddress}">
+									</div>
+								</div>
+							</div>
+							<!-- パスワード -->
+							<div class="form-group">
+								<div class="row">
+									<div class="col-sm-12">
+										<label for="passwaord">
+											パスワード:
+										</label>
+										<label class="error-messages">
+											<span th:if="${#fields.hasErrors('password')}" th:errors="*{password}">パスワードを入力してください</span>
+										</label>
+										<input type="password" name="password" id="password" class="form-control" placeholder="password" th:field="*{password}">
+									</div>
+								</div>
+							</div>
+							<!-- 登録ボタン -->
+							<div class="form-group">
+								<div class="row">
+									<div class="col-sm-12">
+										<button type="submit" class="btn btn-primary">登録</button>
+									</div>
+								</div>
+							</div>
+						</fieldset>
+					</form>
 
 <!-- ここにモックのform要素を貼り付けます -->
-
-
 <!-- ここから下を編集する必要はありません -->
 				</div>
 			</div>
