--- a/src/main/resources/templates/administrator/login.html
+++ b/src/main/resources/templates/administrator/login.html
@@ -35,16 +35,15 @@
 							<div th:if="${#fields.hasErrors('mailAddress')}" class="form-group">
 								<div th:if="${#fields.hasErrors('mailAddress')}" class="alert alert-danger">
 									<p th:if="${#fields.hasErrors('mailAddress')}" th:errors="*{mailAddress}"></p>
-									<p th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
 			                    </div>
 			                </div>
 							<div class="form-group">
 								<label for="mailAddress">メールアドレス:</label>
-								<input type="text" name="mailAddress" id="mailAddress" class="form-control" placeholder="Email" th:field="*{mailAddress}">
+								<input type="text" name="mailAddress" id="mailAddress" class="form-control" placeholder="Email" >
 							</div>
 							<div class="form-group">
 								<label for="inputPassword">パスワード:</label>
-								<input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" th:field="*{password}">
+								<input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password">
 							</div>
 							<div class="form-group">
 								<button type="submit" class="btn btn-primary">ログイン</button>
