--- a/src/main/resources/templates/employee/detail.html
+++ b/src/main/resources/templates/employee/detail.html
@@ -94,7 +94,11 @@
 							    <td>
 							      <!-- <span th:text="${employee.gender}">女性</span> -->
 							      <label class="control-label" style="color: red" for="gender" th:if="${#fields.hasErrors('gender')}" th:errors="*{gender}"></label>
-							      <input type="text" name="gender" id="gender" class="form-control" value="3" placeholder="男性" th:field="*{gender}">
+							      <!-- <input type="text" name="gender" id="gender" class="form-control" value="3" placeholder="男性" th:field="*{gender}"> -->
+							      <input type="radio" name="gender" id="man" value="男性" th:field="*{gender}">
+							      <label for="man">男性</label>
+							      <input type="radio" name="gender" id="woman" value="女性" th:field="*{gender}">
+							      <label for="woman">女性</label>
 							    </td>
 							  </tr>
 							  <tr>
@@ -154,7 +158,7 @@
 							    <td>
 							      <!-- <span th:text="${employee.salary+'円'}">400000円</span> -->
 							      <label class="control-label" style="color: red" for="salary" th:if="${#fields.hasErrors('salary')}" th:errors="*{salary}"></label>
-							      <input type="text" name="salaly" id="salary" class="form-control" value="3" th:field="*{salary}">円
+							      <input type="text" name="salaly" id="salary" value="3" th:field="*{salary}">円
 							    </td>
 							  </tr>
 							  <tr>
@@ -162,9 +166,9 @@
 							      特性
 							    </th>
 							    <td>
-							      <!-- <span th:text="${employee.characteristics}">明るく素直な性格です。リーダーシップを発揮します。新卒社員研修の時はグループ開発の時にリーダーを買ってでました。積極性も人間性も抜群です。周りに対する不満も聞いたことがありません。</span> -->
+							      <span th:text="${employee.characteristics}">明るく素直な性格です。リーダーシップを発揮します。新卒社員研修の時はグループ開発の時にリーダーを買ってでました。積極性も人間性も抜群です。周りに対する不満も聞いたことがありません。</span>
 							      <label class="control-label" style="color: red" for="characteristics" th:if="${#fields.hasErrors('characteristics')}" th:errors="*{characteristics}"></label>
-							      <textarea rows="" cols="" name="characteristics" id="characteristics" class="form-control" th:field="*{characteristics}"></textarea>
+							      <textarea rows="5" cols="" name="characteristics" id="characteristics" class="form-control" th:field="*{characteristics}"></textarea>
 							    </td>
 							  </tr>
 							  <tr>
@@ -173,9 +177,6 @@
 							    </th>
 							    <td>
 							        <!-- <span th:text="${employee.dependentsCount}"></span> -->
-							    	<!-- <label class="error-messages" >
-										
-									</label> -->
 									<label class="control-label" style="color: red" for="dependentsCount" th:if="${#fields.hasErrors('dependentsCount')}" th:errors="*{dependentsCount}"></label>
 									<input type="text" name="dependentsCount" id="dependentsCount" class="form-control" value="3" th:field="*{dependentsCount}">
 									<input type="hidden" name="id" th:value="${employee.id}">
