--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -4,10 +4,10 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="http://yourdomian/jquery.js" type="text/javascript"></script>  
+<!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js" type="text/javascript"></script>  
 <script src="http://yourdomian/jquery.pager.js" type="text/javascript"></script>  
-<script type="text/javascript">  
-  $(document).ready(function () {  
+<script>  
+  $(function() {  
     $('#emp').pager('employee', {  
       navId: 'nav',  //ナビゲーションに付与するid  
       height: '12em',  //ページの高さ  
@@ -16,7 +16,7 @@
       linkText: ['1', '2', '3', '4','5','6','7','8','9','10']  //ページごとのリンク文字  
     });               
   });  
-</script>  
+</script>   -->
 <title>従業員管理システム</title>
 <link rel="stylesheet" href="../../static/css/bootstrap.css" th:href="@{/css/bootstrap.css}" >
 <link rel="stylesheet" href="../../static/css/style.css" th:href="@{/css/style.css}" >
@@ -27,41 +27,7 @@
 </head>
 <body>
 	<div class="container">
-		<nav class="navbar navbar-default">
-			<div class="container-fluid">
-				<!-- Brand and toggle get grouped for better mobile display -->
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed"
-						data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
-						aria-expanded="false">
-						<span class="sr-only">Toggle navigation</span> <span
-							class="icon-bar"></span> <span class="icon-bar"></span> <span
-							class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href="list.html" th:href="@{/employee/showList}"> 
-						<!-- 企業ロゴ -->
-						<img src="../../static/img/header_logo_small.png" th:src="@{/img/header_logo_small.png}">
-					</a>
-				</div>
-
-				<!-- Collect the nav links, forms, and other content for toggling -->
-				<div class="collapse navbar-collapse"
-					id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav">
-						<li class="active"><a href="list.html">従業員管理</a></li>
-					</ul>
-					<p class="navbar-text navbar-right">
-						<span th:text="${session.administratorName + 'さん'}">山田さん</span>こんにちは！
-						&nbsp;&nbsp;&nbsp;
-						<a href="../administrator/login.html" class="navbar-link" th:href="@{../administrator/showUpdate}">アカウント情報</a>
-						&nbsp;&nbsp;&nbsp;
-						<a href="../administrator/login.html" class="navbar-link" th:href="@{../administrator/logout}">ログアウト</a>
-					</p>
-				</div>
-				<!-- /.navbar-collapse -->
-			</div>
-			<!-- /.container-fluid -->
-		</nav>
+		<span th:include="/fragment/employee-part::employee_header"></span>
 		
 		<!-- パンくずリスト -->
 		<ol class="breadcrumb">
@@ -90,8 +56,7 @@
 					</th>
 				</tr>
 				
-				<tr th:each="employee:${employeeList}" >
-					<div id="emp">
+				<tr th:each="employee:${employeeList}">
 					<td>
 						<a href="detail.html" th:href="@{/employee/showDetail?id=}+${employee.id}" >
 							<span th:text="${employee.name}"></span>
@@ -102,7 +67,6 @@
 					<td>
 						<span th:text="${employee.dependentsCount}"></span>
 					</td>
-					</div>
 				</tr>
 			</table>
 			<!-- <div id="nav" class="nav"></div> -->
